--- a/IvanZrvnarBusinessDirectoryApp/Base.lproj/Main.storyboard
+++ b/IvanZrvnarBusinessDirectoryApp/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="158" id="RG8-OA-geR">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="158" id="RG8-OA-geR" customClass="BusinessTableViewCell" customModule="IvanZrvnarBusinessDirectoryApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="158"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RG8-OA-geR" id="pdF-Vk-EF0">
@@ -85,6 +85,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="carsForSaleLabel" destination="8fr-0g-iVM" id="0OL-y4-NoB"/>
+                                            <outlet property="companyNameLabel" destination="an7-4X-jGz" id="bSe-S0-DXv"/>
+                                            <outlet property="salesManagerLabel" destination="gWA-6c-0Jm" id="mHr-Pt-y4K"/>
                                             <segue destination="9We-QM-y5F" kind="show" identifier="showDetail" id="o1O-jD-gQ1"/>
                                         </connections>
                                     </tableViewCell>
@@ -101,6 +104,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Car Lots" id="myc-ln-R6h"/>
+                    <connections>
+                        <outlet property="tableView" destination="pcB-r9-mGX" id="8C7-Yk-Gy9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iPF-X8-RPW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
