adjusted storyboard to fix some constrain issues regarding the horizontal stack view

--- a/IvanZrvnarBusinessDirectoryApp/Base.lproj/Main.storyboard
+++ b/IvanZrvnarBusinessDirectoryApp/Base.lproj/Main.storyboard
@@ -36,51 +36,58 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="158" id="RG8-OA-geR" customClass="BusinessTableViewCell" customModule="IvanZrvnarBusinessDirectoryApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="158"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="100" id="RG8-OA-geR" customClass="BusinessTableViewCell" customModule="IvanZrvnarBusinessDirectoryApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RG8-OA-geR" id="pdF-Vk-EF0">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="158"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HiX-86-HIT">
-                                                    <rect key="frame" x="10" y="0.0" width="394" height="300"/>
+                                                    <rect key="frame" x="10" y="0.0" width="394" height="90"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="companyNameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="an7-4X-jGz">
-                                                            <rect key="frame" x="74.5" y="5" width="245" height="30"/>
-                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="102" translatesAutoresizingMaskIntoConstraints="NO" id="zbX-eT-UcY">
-                                                            <rect key="frame" x="8" y="60" width="376.5" height="20.5"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="VRZ-KZ-8qk">
+                                                            <rect key="frame" x="0.0" y="0.0" width="394" height="90"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="contactNameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWA-6c-0Jm">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="144" height="20.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="companyNameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="an7-4X-jGz">
+                                                                    <rect key="frame" x="74.5" y="0.0" width="245" height="44.5"/>
+                                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="carsForSaleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8fr-0g-iVM">
-                                                                    <rect key="frame" x="246" y="0.0" width="130.5" height="20.5"/>
-                                                                    <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
-                                                                    <color key="textColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="102" translatesAutoresizingMaskIntoConstraints="NO" id="zbX-eT-UcY">
+                                                                    <rect key="frame" x="2" y="69.5" width="390" height="20.5"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="contactNameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWA-6c-0Jm">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="144" height="20.5"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="carsForSaleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8fr-0g-iVM">
+                                                                            <rect key="frame" x="246" y="0.0" width="144" height="20.5"/>
+                                                                            <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
+                                                                            <color key="textColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                </stackView>
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.45180135970000002" green="0.99325114489999999" blue="0.99998944999999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="300" id="fLc-9i-3hs"/>
-                                                        <constraint firstItem="an7-4X-jGz" firstAttribute="top" secondItem="HiX-86-HIT" secondAttribute="top" constant="5" id="iZB-Vf-elC"/>
-                                                        <constraint firstItem="an7-4X-jGz" firstAttribute="centerX" secondItem="HiX-86-HIT" secondAttribute="centerX" id="xbn-4b-AEi"/>
+                                                        <constraint firstAttribute="bottom" secondItem="VRZ-KZ-8qk" secondAttribute="bottom" id="1PS-Mu-Eca"/>
+                                                        <constraint firstItem="VRZ-KZ-8qk" firstAttribute="leading" secondItem="HiX-86-HIT" secondAttribute="leading" id="Vnj-gi-nev"/>
+                                                        <constraint firstAttribute="trailing" secondItem="VRZ-KZ-8qk" secondAttribute="trailing" id="jQv-rd-lp7"/>
+                                                        <constraint firstItem="VRZ-KZ-8qk" firstAttribute="top" secondItem="HiX-86-HIT" secondAttribute="top" id="n2W-Ry-BTs"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="HiX-86-HIT" firstAttribute="top" secondItem="pdF-Vk-EF0" secondAttribute="top" id="Jhn-bz-jqI"/>
                                                 <constraint firstItem="HiX-86-HIT" firstAttribute="leading" secondItem="pdF-Vk-EF0" secondAttribute="leading" constant="10" id="MSz-lf-rSt"/>
+                                                <constraint firstAttribute="bottom" secondItem="HiX-86-HIT" secondAttribute="bottom" constant="10" id="VqC-CD-l40"/>
                                                 <constraint firstAttribute="trailing" secondItem="HiX-86-HIT" secondAttribute="trailing" constant="10" id="mHN-8L-Qwy"/>
                                             </constraints>
                                         </tableViewCellContentView>
