--- a/IvanZrvnarBusinessDirectoryApp/Storyboards/Base.lproj/Main.storyboard
+++ b/IvanZrvnarBusinessDirectoryApp/Storyboards/Base.lproj/Main.storyboard
@@ -8,21 +8,84 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Contacts-->
+        <!--Save Car Contacts-->
         <scene sceneID="vSW-Zb-OrP">
             <objects>
-                <viewController id="dYp-lt-mn1" sceneMemberID="viewController">
+                <viewController id="dYp-lt-mn1" customClass="ContactViewController" customModule="IvanZrvnarBusinessDirectoryApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BFF-z7-gAd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tly-z2-1ef">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="contactCell" textLabel="Fzz-R8-PH9" detailTextLabel="tbl-uU-4SS" imageView="HAd-9t-kPb" style="IBUITableViewCellStyleSubtitle" id="KlG-nS-brv">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KlG-nS-brv" id="cJl-K2-hx8">
+                                            <rect key="frame" x="0.0" y="0.0" width="385.5" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Fzz-R8-PH9">
+                                                    <rect key="frame" x="57.25" y="6" width="25" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tbl-uU-4SS">
+                                                    <rect key="frame" x="57.25" y="22.5" width="40.5" height="13.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="car" catalog="system" id="HAd-9t-kPb">
+                                                    <rect key="frame" x="18.25" y="12.5" width="24" height="17.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="dHj-dh-cn5" kind="show" id="Df3-eY-5wn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="cng-1m-9iL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cng-1m-9iL" firstAttribute="bottom" secondItem="tly-z2-1ef" secondAttribute="bottom" id="Obf-wd-grZ"/>
+                            <constraint firstItem="tly-z2-1ef" firstAttribute="top" secondItem="cng-1m-9iL" secondAttribute="top" id="R99-DA-7Tp"/>
+                            <constraint firstItem="cng-1m-9iL" firstAttribute="trailing" secondItem="tly-z2-1ef" secondAttribute="trailing" id="hFe-XU-7Bb"/>
+                            <constraint firstItem="tly-z2-1ef" firstAttribute="leading" secondItem="cng-1m-9iL" secondAttribute="leading" id="kwT-4n-cnF"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Contacts" image="car.circle" catalog="system" id="MTf-Tz-DoG"/>
+                    <navigationItem key="navigationItem" title="Save Car Contacts" id="HBl-3D-mLK"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8cf-29-Hwy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="725" y="321"/>
+            <point key="canvasLocation" x="1634.7826086956522" y="320.75892857142856"/>
+        </scene>
+        <!--Contact Detail View Controller-->
+        <scene sceneID="jmL-AS-VWa">
+            <objects>
+                <viewController id="dHj-dh-cn5" customClass="ContactDetailViewController" customModule="IvanZrvnarBusinessDirectoryApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kAJ-7T-XmV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Xbj-rE-NqN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zRM-Pu-pHG">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="bell.circle" catalog="system" id="1ef-Jp-LHj"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x1M-bA-COU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2445" y="321"/>
         </scene>
         <!--Car Lots-->
         <scene sceneID="Gmn-GR-Vi0">
@@ -142,7 +205,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="9V6-y5-Dhz">
                                         <rect key="frame" x="62" y="378" width="290" height="20.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7C-5M-2E1">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7C-5M-2E1">
                                                 <rect key="frame" x="0.0" y="0.0" width="122" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -219,7 +282,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="vEj-Cv-ziI" kind="relationship" relationship="viewControllers" id="gDi-5Z-6cg"/>
-                        <segue destination="dYp-lt-mn1" kind="relationship" relationship="viewControllers" id="cu4-F4-3Xb"/>
+                        <segue destination="7nK-81-evS" kind="relationship" relationship="viewControllers" id="cu4-F4-3Xb"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tqw-hl-5td" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -245,9 +308,30 @@
             </objects>
             <point key="canvasLocation" x="724.63768115942037" y="-356.25"/>
         </scene>
+        <!--Contacts-->
+        <scene sceneID="TRK-hU-3lo">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7nK-81-evS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Contacts" image="car.circle" catalog="system" id="MTf-Tz-DoG"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="g9o-li-Hwj">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="dYp-lt-mn1" kind="relationship" relationship="rootViewController" id="Y0K-d1-VFI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oqv-xm-00J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="724.63768115942037" y="320.75892857142856"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="bell.circle" catalog="system" width="128" height="121"/>
         <image name="building.2.crop.circle" catalog="system" width="128" height="121"/>
+        <image name="car" catalog="system" width="128" height="93"/>
         <image name="car.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
