--- a/IvanZrvnarBusinessDirectoryApp/Storyboards/Base.lproj/Main.storyboard
+++ b/IvanZrvnarBusinessDirectoryApp/Storyboards/Base.lproj/Main.storyboard
@@ -79,16 +79,73 @@
                     <view key="view" contentMode="scaleToFill" id="kAJ-7T-XmV">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="S0N-RS-PhI">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="businessNameLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bY-Ka-hmM">
+                                        <rect key="frame" x="71.5" y="0.0" width="271" height="37"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="businessPhoneLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3o1-CD-cSd">
+                                        <rect key="frame" x="128.5" y="49" width="157" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="z6Q-4L-UH3">
+                                        <rect key="frame" x="0.0" y="81.5" width="414" height="643.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="carCell" textLabel="6ja-WK-69N" imageView="s1S-5F-SQJ" style="IBUITableViewCellStyleDefault" id="Rqi-VR-RTx">
+                                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rqi-VR-RTx" id="7Do-Hd-FWc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6ja-WK-69N">
+                                                            <rect key="frame" x="55.5" y="0.0" width="338.5" height="43.5"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" image="1.circle" catalog="system" id="s1S-5F-SQJ">
+                                                            <rect key="frame" x="20.25" y="12" width="20" height="19"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Xbj-rE-NqN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Xbj-rE-NqN" firstAttribute="bottom" secondItem="S0N-RS-PhI" secondAttribute="bottom" id="MQb-A6-cEl"/>
+                            <constraint firstItem="S0N-RS-PhI" firstAttribute="leading" secondItem="kAJ-7T-XmV" secondAttribute="leading" id="cab-0p-nKn"/>
+                            <constraint firstItem="S0N-RS-PhI" firstAttribute="top" secondItem="Xbj-rE-NqN" secondAttribute="top" id="cxk-9W-jgQ"/>
+                            <constraint firstItem="Xbj-rE-NqN" firstAttribute="trailing" secondItem="S0N-RS-PhI" secondAttribute="trailing" id="wgI-Xv-KZb"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zRM-Pu-pHG">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="bell.circle" catalog="system" id="1ef-Jp-LHj"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="businessNameLabel" destination="0bY-Ka-hmM" id="d2R-Eq-JCE"/>
+                        <outlet property="businessPhoneLabel" destination="3o1-CD-cSd" id="QW1-zT-mrL"/>
+                        <outlet property="tableView" destination="z6Q-4L-UH3" id="B6t-21-YjB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x1M-bA-COU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2445" y="321"/>
+            <point key="canvasLocation" x="2444.9275362318845" y="320.75892857142856"/>
         </scene>
         <!--Car Lots-->
         <scene sceneID="Gmn-GR-Vi0">
@@ -335,10 +392,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bell.circle" catalog="system" width="128" height="121"/>
-        <image name="building.2.crop.circle" catalog="system" width="128" height="121"/>
-        <image name="car" catalog="system" width="128" height="93"/>
-        <image name="car.circle" catalog="system" width="128" height="121"/>
+        <image name="1.circle" catalog="system" width="32" height="32"/>
+        <image name="bell.circle" catalog="system" width="32" height="32"/>
+        <image name="building.2.crop.circle" catalog="system" width="32" height="32"/>
+        <image name="car" catalog="system" width="32" height="32"/>
+        <image name="car.circle" catalog="system" width="32" height="32"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
